--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@ngrok/ngrok": "^1.4.1",
     "@prisma/client": "^6.1.0",
-    "axios": "^1.7.7",
+    "@privy-io/server-auth": "^1.18.4",
+    "@raydium-io/raydium-sdk-v2": "^0.1.111-alpha",
+    "@solana/spl-token": "^0.4.12",
+    "@solana/web3.js": "^1.98.0",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "nodemon": "^3.1.9",
     "prisma": "^6.1.0"
   }
 }
